tests/example_pods_w_same_owner_and_labels_gap_with_good_match_expression2/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: use_match_exp_with_all_gap_values_of_app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: app
          operator: In
          values:
          - query-selector
          - command-selector
    ports:
    - port: 90
      protocol: TCP

---
